--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
     <canvas id="skinCanvas" width="64" height="64" style="display:none;"></canvas>
 
     <div id="statusText">Load a skin to begin.</div>
-
     <button id="downloadBtn" disabled>Download Skin</button>
   </div>
 
@@ -172,7 +171,7 @@
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
-  console.log("Probending Wardrobe Final Build Loaded");
+  console.log("Probending Wardrobe – UV-Fixed Build Loaded");
 
   const canvas = document.getElementById("skinCanvas");
   const ctx = canvas.getContext("2d");
@@ -181,7 +180,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const downloadBtn = document.getElementById("downloadBtn");
 
   const outfitButtons = [...document.querySelectorAll(".outfit-btn")];
-  const modelButtons  = [...document.querySelectorAll(".toggle-btn")];
+  const modelButtons = [...document.querySelectorAll(".toggle-btn")];
 
   const skin3dCanvas = document.getElementById("skin3d");
 
@@ -211,21 +210,27 @@ document.addEventListener("DOMContentLoaded", () => {
   --------------------------------*/
   function update3D() {
     if (!baseSkinImg) return;
-    const url = canvas.toDataURL();
-    viewer.loadSkin(url, { model: currentModel });
+    viewer.loadSkin(canvas.toDataURL(), { model: currentModel });
   }
 
 
   /* -------------------------------------------------------
-     SAFE OUTER-LAYER WIPE (prevents black-arm UV bugs)
+     TRUE UV-SAFE OUTER-LAYER REMOVAL
   ------------------------------------------------------- */
   function clearOuterLayers() {
+    // Create a single transparent pixel to stamp UV regions with
+    const px = document.createElement("canvas");
+    px.width = 1;
+    px.height = 1;
+    const pctx = px.getContext("2d");
+    pctx.clearRect(0,0,1,1);
+
     const regions = [
-      [16,36,24,12],
-      [40,36,8,12],
-      [48,36,8,12],
-      [0,36,8,12],
-      [8,36,8,12],
+      [16,36,24,12],  // torso layer 2
+      [40,36,8,12],   // right arm layer 2
+      [48,36,8,12],   // left arm layer 2
+      [0,36,8,12],    // right leg layer 2
+      [8,36,8,12],    // left leg layer 2
       [16,52,24,12],
       [40,52,8,12],
       [48,52,8,12],
@@ -233,18 +238,19 @@ document.addEventListener("DOMContentLoaded", () => {
       [8,52,8,12]
     ];
 
-    ctx.globalCompositeOperation = "source-over";
-    ctx.fillStyle = "rgba(0,0,0,0)";
-
+    // Draw transparent pixel on every UV so geometry is satisfied
     regions.forEach(([x,y,w,h]) => {
-      ctx.clearRect(x,y,w,h);
-      ctx.fillRect(x,y,w,h);
+      for (let ix = 0; ix < w; ix++) {
+        for (let iy = 0; iy < h; iy++) {
+          ctx.drawImage(px, x + ix, y + iy);
+        }
+      }
     });
   }
 
 
   /* -------------------------------
-     RENDER COMPOSITE
+     RENDER FINAL SKIN
   --------------------------------*/
   function renderCanvas() {
     if (!baseSkinImg) return;
@@ -266,7 +272,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
   /* LOAD FROM UPLOAD */
-  document.getElementById("skinFile").addEventListener("change", (e) => {
+  document.getElementById("skinFile").addEventListener("change", e => {
     const file = e.target.files[0];
     const reader = new FileReader();
     reader.onload = ev => {
@@ -296,10 +302,9 @@ document.addEventListener("DOMContentLoaded", () => {
       outfitButtons.forEach(b => b.classList.remove("active"));
       btn.classList.add("active");
 
-      const path = btn.dataset.outfit;
       const img = new Image();
       img.onload = () => { outfitImg = img; renderCanvas(); };
-      img.src = path;
+      img.src = btn.dataset.outfit;
     });
   });
 
@@ -316,7 +321,7 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 
 
-  /* DOWNLOAD BUTTON */
+  /* DOWNLOAD */
   downloadBtn.addEventListener("click", () => {
     const a = document.createElement("a");
     a.href = canvas.toDataURL("image/png");
